--- a/index.html
+++ b/index.html
@@ -144,11 +144,22 @@
     <div class="section-title">
       <h2>Servicios</h2>
     </div><div class="services">
-  <div class="card">
-    <h3>Rutinas Personalizadas</h3>
-    <p>Planes de entrenamiento diseñados según tus objetivos, nivel y estilo de vida.</p>
-  </div>
+<div class="card" onclick="toggleInfo('rutinas')">
+  <h3>Rutinas Personalizadas</h3>
+  <p>Planes de entrenamiento diseñados según tus objetivos</p>
 
+  <div id="rutinas" class="info">
+    <p>
+      Rutinas creadas en base a tus objetivos personales (fuerza, estética,
+      descenso de grasa o rendimiento), teniendo en cuenta tu nivel actual
+      y tu disponibilidad. Se adaptan para entrenar en casa o en gimnasio.
+    </p>
+
+    <a href="https://wa.me/5491123596444" target="_blank" class="btn">
+      Consultar por WhatsApp
+    </a>
+  </div>
+</div> 
   <div class="card">
     <h3>Entrenamiento Individual</h3>
     <p>Clases uno a uno con seguimiento personalizado y corrección técnica constante.</p>
