--- a/index.html
+++ b/index.html
@@ -79,6 +79,25 @@
       margin-bottom: 15px;
       font-size: 1.4rem;
     }
+    .info {
+  display: none;
+  margin-top: 20px;
+  background: #0b0b0b;
+  padding: 20px;
+  border-radius: 15px;
+  border: 1px solid #e10600;
+}
+
+.btn {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 14px 26px;
+  background: #e10600;
+  color: #ffffff;
+  border-radius: 30px;
+  text-decoration: none;
+  font-weight: bold;
+}
 
     .about {
       display: grid;
