--- a/index.html
+++ b/index.html
@@ -209,5 +209,16 @@
     <a href="https://wa.me/5491123596444?text=Hola%20Lucia,%20quiero%20info%20sobre%20entrenamiento%20personal%20%F0%9F%92%AA">Contactar por WhatsApp</a>
   </section>  <footer>
     © 2026 Lucia Amodio · Entrenamiento Personal
-  </footer></body>
-</html>
+<footer>
+  © 2026 Lucia Amodio · Entrenamiento Personal
+</footer>
+
+<script>
+  function toggleInfo(id) {
+    const info = document.getElementById(id);
+    info.style.display = info.style.display === "block" ? "none" : "block";
+  }
+</script>
+
+</body>
+</html>  
