--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lucia Amodio | Entrenamiento Personal</title>
+  <title>LA Training | Entrenamiento Personal</title>
 
   <style>
     * {
@@ -27,8 +27,9 @@
     }
 
     header h1 {
-      font-size: 2.9rem;
+      font-size: 3rem;
       font-weight: 900;
+      letter-spacing: 1px;
     }
 
     header p {
@@ -104,7 +105,7 @@
 
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 25px;
     }
 
@@ -113,7 +114,7 @@
       border-radius: 20px;
       box-shadow: 0 15px 40px rgba(0,0,0,0.15);
       object-fit: cover;
-      height: 320px;
+      height: 340px;
     }
 
     .cta {
@@ -153,8 +154,12 @@
 <body>
 
 <header>
-  <h1>Lucia Amodio</h1>
-  <p>Entrenamiento personal · Rutinas online y presenciales · Clases individuales y grupales</p>
+  <h1>LA Training</h1>
+  <p>
+    Entrenamiento personal · Rutinas online y presenciales ·  
+    Clases individuales y grupales  
+    <br><strong>Lucia Amodio · Instructora certificada</strong>
+  </p>
 </header>
 
 <section>
@@ -172,7 +177,7 @@
           Rutinas adaptadas a tu nivel, objetivos y disponibilidad,
           para entrenar en casa o en gimnasio.
         </p>
-        <a href="https://wa.me/5491123596444?text=Hola%20Lucia,%20quiero%20información%20sobre%20rutinas%20personalizadas"
+        <a href="https://wa.me/5491123596444?text=Hola%20LA%20Training,%20quiero%20información%20sobre%20rutinas%20personalizadas"
            class="btn" target="_blank">
            Consultar por WhatsApp
         </a>
@@ -187,7 +192,7 @@
           Clases personalizadas con corrección técnica,
           planificación y acompañamiento constante.
         </p>
-        <a href="https://wa.me/5491123596444?text=Hola%20Lucia,%20estoy%20interesada%20en%20entrenamiento%20individual"
+        <a href="https://wa.me/5491123596444?text=Hola%20LA%20Training,%20estoy%20interesada%20en%20entrenamiento%20individual"
            class="btn" target="_blank">
            Consultar por WhatsApp
         </a>
@@ -199,10 +204,10 @@
       <p>Entrenamientos dinámicos y motivadores.</p>
       <div id="grupal" class="info">
         <p>
-          Clases grupales para mejorar el rendimiento,
-          entrenar con motivación y sostener la constancia.
+          Clases grupales para entrenar con constancia,
+          motivación y energía en equipo.
         </p>
-        <a href="https://wa.me/5491123596444?text=Hola%20Lucia,%20quiero%20información%20sobre%20entrenamientos%20grupales"
+        <a href="https://wa.me/5491123596444?text=Hola%20LA%20Training,%20quiero%20información%20sobre%20clases%20grupales"
            class="btn" target="_blank">
            Consultar por WhatsApp
         </a>
@@ -214,27 +219,25 @@
 
 <section>
   <div class="section-title">
-    <h2>Entrenamientos reales</h2>
+    <h2>Entrenamientos</h2>
   </div>
 
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1599058917212-d750089bc07a" />
-    <img src="https://images.unsplash.com/photo-1579758629938-03607ccdbaba" />
-    <img src="https://images.unsplash.com/photo-1594381898411-846e7d193883" />
-    <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1" />
+    <img src="https://images.unsplash.com/photo-1599058917212-d750089bc07a" alt="Entrenamiento mujer">
+    <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1" alt="Entrenamiento hombre">
   </div>
 </section>
 
 <section class="cta">
   <h2>¿Listos para entrenar?</h2>
-  <p>Escribime y empezamos</p><br>
-  <a href="https://wa.me/5491123596444?text=Hola%20Lucia,%20quiero%20empezar%20a%20entrenar">
+  <p>Escribinos y empezamos</p><br>
+  <a href="https://wa.me/5491123596444?text=Hola%20LA%20Training,%20quiero%20empezar%20a%20entrenar">
     Contactar por WhatsApp
   </a>
 </section>
 
 <footer>
-  © 2026 Lucia Amodio · Entrenamiento Personal
+  © 2026 LA Training · Entrenamiento Personal
 </footer>
 
 <script>
