--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     header p {
       font-size: 1.2rem;
       margin-top: 14px;
-      max-width: 720px;
+      max-width: 760px;
       margin-inline: auto;
     }
 
@@ -111,10 +111,10 @@
 
     .gallery img {
       width: 100%;
+      height: 340px;
+      object-fit: cover;
       border-radius: 20px;
       box-shadow: 0 15px 40px rgba(0,0,0,0.15);
-      object-fit: cover;
-      height: 340px;
     }
 
     .cta {
@@ -156,9 +156,8 @@
 <header>
   <h1>LA Training</h1>
   <p>
-    Entrenamiento personal · Rutinas online y presenciales ·  
-    Clases individuales y grupales  
-    <br><strong>Lucia Amodio · Instructora certificada</strong>
+    Entrenamiento personal · Rutinas online y presenciales · Clases individuales y grupales<br>
+    <strong>Lucia Amodio · Instructora certificada</strong>
   </p>
 </header>
 
@@ -179,7 +178,7 @@
         </p>
         <a href="https://wa.me/5491123596444?text=Hola%20LA%20Training,%20quiero%20información%20sobre%20rutinas%20personalizadas"
            class="btn" target="_blank">
-           Consultar por WhatsApp
+          Consultar por WhatsApp
         </a>
       </div>
     </div>
@@ -194,7 +193,7 @@
         </p>
         <a href="https://wa.me/5491123596444?text=Hola%20LA%20Training,%20estoy%20interesada%20en%20entrenamiento%20individual"
            class="btn" target="_blank">
-           Consultar por WhatsApp
+          Consultar por WhatsApp
         </a>
       </div>
     </div>
@@ -209,7 +208,7 @@
         </p>
         <a href="https://wa.me/5491123596444?text=Hola%20LA%20Training,%20quiero%20información%20sobre%20clases%20grupales"
            class="btn" target="_blank">
-           Consultar por WhatsApp
+          Consultar por WhatsApp
         </a>
       </div>
     </div>
@@ -223,7 +222,9 @@
   </div>
 
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1599058917212-d750089bc07a" alt="Entrenamiento mujer">
+    <!-- Mujer -->
+    <img src="https://images.unsplash.com/photo-1594381898411-846e7d193883" alt="Entrenamiento mujer">
+    <!-- Hombre -->
     <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1" alt="Entrenamiento hombre">
   </div>
 </section>
